--- a/InformeGEMVEP.html
+++ b/InformeGEMVEP.html
@@ -278,7 +278,36 @@ Carahue + 42.86 %<br />
 Llaillay + 40.48 %<br />
 Panguipulli + 37.14 %<br />
 Molina + 36.73 %<br />
-Penco + 33.33 %</p>
+Penco + 33.33 %<br />
+[1] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [16] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [31] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [46] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [61] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [76] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [91] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [106] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [121] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [136] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [151] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [166] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [181] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [196] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [211] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [226] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [241] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [256] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [271] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [286] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [301] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [316] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [331] TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE TRUE [346] TRUE Las comunas de más de 25.000 habitantes con mayor tasa de positividad del examen PCR en la ultima semana son:</p>
+<p>San Antonio 9.4 %<br />
+Cartagena 8.9 % # Lo Espejo 8.5 % # Mulchen 7.9 % # Renca 7.9 % #</p>
+</div>
+<div id="trazabilidad" class="section level2">
+<h2>Trazabilidad</h2>
+<p>Según el último informe de Testeo, Trazabilidad y Aislamiento de esta semana, en Chile se encuentran 3.96 contactos por cada caso confirmado. Esto es un aumento del 17.44 % respecto a la semana anterior.</p>
+<p>Las regiones con mayor trazabilidad del país en este nuevo informe son:</p>
+<p>Magallanes 8.5 contactos por caso<br />
+Arica 6.91<br />
+Araucania 6.86<br />
+Coquimbo 6.52</p>
+<p>Por otra parte las regiones con menor trazabilidad del país son:</p>
+<p>Maule 4.75 contactos por caso<br />
+Los Lagos 4.68<br />
+Valparaiso 3.57<br />
+Metropolitana 2.9<br />
+Las comunas de más de 25.000 habitantes con la mejor trazabilidad del país en la ultima semana son:</p>
+<p>La Cruz 22.5 contactos por caso<br />
+Chimbarongo 16.67<br />
+Nacimiento 14.86<br />
+Victoria 14.5<br />
+San Clemente 12.38</p>
+<p>Por otra parte. Las comunas de más de 25.000 habitantes con la peor trazabilidad del país en la ultima semana son:</p>
+<p>Santiago 1.88 contactos por caso<br />
+Providencia 2.04<br />
+Macul 2.08<br />
+Pirque 2.23<br />
+Independencia 2.27</p>
 </div>
 </div>
 <div id="indicadores-usados" class="section level1">
