--- a/InformeGEMVEP.html
+++ b/InformeGEMVEP.html
@@ -181,7 +181,7 @@ pre code {
 </ul>
 <div id="balance-semanal" class="section level2">
 <h2>Balance Semanal</h2>
-<p>En la ultima semana se han confirmado 17359 casos de Covid-19 en Chile. Una tasa de incidencia de 12.74 cada 100.000 habitantes.Esto es una disminucion de un -0.28 % de los casos respecto de la semana anterior. Nuestra estimación del R Efectivo a nivel nacional es de 1.05 . La incidencia actual esta 1.3 veces sobre un nivel crítico de contagios. Además, en último informe epidemiológico se informaron 18.206 casos activos (confirmados y probables) de Covid-19 en el pais (tasa de 93,6 casos c/100.000h). Nosotros estimamos 32.801 casos activos (168,6 casos c/100.000h). En consecuencia, estimamos un subreporte de casos activos de un 44.5%.</p>
+<p>En la ultima semana se han confirmado 17359 casos de Covid-19 en Chile. Una tasa de incidencia de 12.74 cada 100.000 habitantes.Este es la mayor incidencia semanal en Chile desde el 17 de Noviembre .Esto es una disminucion de un -0.28 % de los casos respecto de la semana anterior. Nuestra estimación del R Efectivo a nivel nacional es de 1.05 . La incidencia actual esta 1.3 veces sobre un nivel crítico de contagios. Además, en último informe epidemiológico se informaron 18.206 casos activos (confirmados y probables) de Covid-19 en el pais (tasa de 93,6 casos c/100.000h). Nosotros estimamos 32.801 casos activos (168,6 casos c/100.000h). En consecuencia, estimamos un subreporte de casos activos de un 44.5%.</p>
 <p>Las regiones con las mayores tasas de incidencia promedio en la ultima semana son:</p>
 <p>Aysen 48.6 casos cada 100.000 habitantes<br />
 Atacama 22.06<br />
@@ -215,7 +215,7 @@ Balance Semanal: Tasa de Incidencia es número de casos nuevos en la última sem
 </div>
 <div id="hospitalizaciones" class="section level2">
 <h2>Hospitalizaciones</h2>
-<p>El número de pacientes con Covid-19 en UCI informados el 18 de Noviembre fue 624 ( 54 mas que semana previa) . Además, este día se informaron 527 pacientes Covid-19 en ventilación mecánica invasiva (VMI) ( 54 menos que semana previa) .<br />
+<p>El número de pacientes con Covid-19 en UCI informados el 18 de Noviembre fue 624 ( 57 mas que semana previa) . Además, este día se informaron 527 pacientes Covid-19 en ventilación mecánica invasiva (VMI) ( 54 mas que semana previa) .<br />
 Las regiones con mayor porcentaje de ocupación UCI al día son:</p>
 <p>Valparaiso 98.14 %<br />
 Metropolitana 95.08 %<br />
